--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <h2>Hello!</h2>
   <ul>
   <li>I'm Martin Fung.</li>
-  <li>I am a biologist from Hong Kong.</li>
+  <li>I'm a biology Ph.D. based in Hong Kong.</li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/?term=To+Sing+Fung%5Bau%5D+or+24987391%5Bpmid%5D">Click here for my PubMed search page</a></li>
   <li><a href="https://scholar.google.com/citations?user=igL5v0QAAAAJ">Click here for my Google Scholar page</a></li>
   </article>
